# firstProject

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  calc.cpp
src/headers/: calc.hpp  main.hpp
